k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: semana4-app
  namespace: semana4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: semana4-app
  template:
    metadata:
      labels:
        app: semana4-app
    spec:
      containers:
        - name: semana4-app
          image: semana4-app:1.0.0
          imagePullPolicy: Never
          ports:
            - containerPort: 80
