k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: semana4-service
  namespace: semana4
spec:
  selector:
    app: semana4-app
  ports:
    - name: http
      port: 80
      targetPort: 3000
