k8s/app/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: semana4-app-route
  namespace: semana4
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`app.javier-sontay.com`)
      kind: Rule
      services:
        - name: semana4-service
          port: 80
